--- a/ansible/workstation-setup.yml
+++ b/ansible/workstation-setup.yml
@@ -3,48 +3,77 @@
 - name: Workstation Setup
   hosts: localhost
   become: yes
-  
+
   vars:
     username: "{{ lookup('env', 'USER') }}"
-  
+
   tasks:
-    # Base system
-    - name: Update apt cache
+    # Detect OS family
+    - name: Display detected OS
+      debug:
+        msg: "Detected OS: {{ ansible_distribution }} {{ ansible_distribution_version }} ({{ ansible_os_family }})"
+
+    # Base system update (Debian/Ubuntu)
+    - name: Update apt cache (Debian/Ubuntu)
       apt:
         update_cache: yes
         cache_valid_time: 3600
-    
-    # Install prerequisites for Docker repo
-    - name: Install Docker prerequisites
+      when: ansible_os_family == "Debian"
+
+    # Base system update (RHEL/Fedora)
+    - name: Update dnf cache (RHEL/Fedora)
+      dnf:
+        update_cache: yes
+      when: ansible_os_family == "RedHat"
+
+    # ============================================
+    # DOCKER INSTALLATION - DEBIAN/UBUNTU
+    # ============================================
+
+    - name: Remove old Docker packages (Debian/Ubuntu)
+      apt:
+        name:
+          - docker.io
+          - docker-doc
+          - docker-compose
+          - podman-docker
+          - containerd
+          - runc
+        state: absent
+      when: ansible_os_family == "Debian"
+      ignore_errors: yes
+
+    - name: Install Docker prerequisites (Debian/Ubuntu)
       apt:
         name:
           - ca-certificates
           - curl
           - gnupg
         state: present
-    
-    # Add Docker GPG key
-    - name: Create keyrings directory
+      when: ansible_os_family == "Debian"
+
+    - name: Create keyrings directory (Debian/Ubuntu)
       file:
         path: /etc/apt/keyrings
         state: directory
         mode: '0755'
-    
-    - name: Add Docker GPG key
+      when: ansible_os_family == "Debian"
+
+    - name: Add Docker GPG key (Debian/Ubuntu)
       ansible.builtin.get_url:
         url: https://download.docker.com/linux/ubuntu/gpg
         dest: /etc/apt/keyrings/docker.asc
         mode: '0644'
-    
-    # Add Docker repository
-    - name: Add Docker repository
+      when: ansible_os_family == "Debian"
+
+    - name: Add Docker repository (Debian/Ubuntu)
       ansible.builtin.apt_repository:
         repo: "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
         state: present
         filename: docker
-    
-    # Install Docker from official repo
-    - name: Install Docker Engine
+      when: ansible_os_family == "Debian"
+
+    - name: Install Docker Engine (Debian/Ubuntu)
       apt:
         name:
           - docker-ce
@@ -54,29 +83,80 @@
           - docker-compose-plugin
         state: present
         update_cache: yes
+      when: ansible_os_family == "Debian"
 
-    # Docker setup
-    - name: Add user to docker group
-      user:
-        name: "{{ username }}"
-        groups: docker
-        append: yes
+    # ============================================
+    # DOCKER INSTALLATION - RHEL/FEDORA
+    # ============================================
 
-    # Start containerd FIRST
+    - name: Remove old Docker packages (RHEL/Fedora)
+      dnf:
+        name:
+          - docker
+          - docker-client
+          - docker-client-latest
+          - docker-common
+          - docker-latest
+          - docker-latest-logrotate
+          - docker-logrotate
+          - docker-selinux
+          - docker-engine-selinux
+          - docker-engine
+          - podman
+          - runc
+        state: absent
+      when: ansible_os_family == "RedHat"
+      ignore_errors: yes
+
+    - name: Install dnf-plugins-core (RHEL/Fedora)
+      dnf:
+        name: dnf-plugins-core
+        state: present
+      when: ansible_os_family == "RedHat"
+
+    - name: Add Docker repository (Fedora)
+      ansible.builtin.command:
+        cmd: dnf config-manager --add-repo https://download.docker.com/linux/fedora/docker-ce.repo
+      when:
+        - ansible_os_family == "RedHat"
+        - ansible_distribution == "Fedora"
+      changed_when: false
+
+    - name: Add Docker repository (RHEL/CentOS)
+      ansible.builtin.command:
+        cmd: dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+      when:
+        - ansible_os_family == "RedHat"
+        - ansible_distribution != "Fedora"
+      changed_when: false
+
+    - name: Install Docker Engine (RHEL/Fedora)
+      dnf:
+        name:
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+          - docker-buildx-plugin
+          - docker-compose-plugin
+        state: present
+      when: ansible_os_family == "RedHat"
+
+    # ============================================
+    # COMMON DOCKER CONFIGURATION
+    # ============================================
+
     - name: Enable and start containerd service
       systemd:
         name: containerd
         enabled: yes
         state: started
 
-    # Wait a moment for containerd to be ready
     - name: Wait for containerd socket
       wait_for:
         path: /run/containerd/containerd.sock
         state: present
         timeout: 30
 
-    # NOW start Docker
     - name: Enable and start Docker service
       systemd:
         name: docker
@@ -87,8 +167,17 @@
       register: docker_start
       until: docker_start is succeeded
 
-    # Development tools
-    - name: Install base dev tools
+    - name: Add user to docker group
+      user:
+        name: "{{ username }}"
+        groups: docker
+        append: yes
+
+    # ============================================
+    # DEVELOPMENT TOOLS - DEBIAN/UBUNTU
+    # ============================================
+
+    - name: Install base dev tools (Debian/Ubuntu)
       apt:
         name:
           - build-essential
@@ -98,18 +187,41 @@
           - vim
           - tmux
           - htop
-        state: present
-
-    # Build tools
-    - name: Install build tools
-      apt:
-        name:
           - cmake
           - ninja-build
           - ccache
         state: present
+      when: ansible_os_family == "Debian"
 
-    # SSH setup
+    # ============================================
+    # DEVELOPMENT TOOLS - RHEL/FEDORA
+    # ============================================
+
+    - name: Install Development Tools group (RHEL/Fedora)
+      dnf:
+        name: '@Development Tools'
+        state: present
+      when: ansible_os_family == "RedHat"
+
+    - name: Install base dev tools (RHEL/Fedora)
+      dnf:
+        name:
+          - git
+          - curl
+          - wget
+          - vim
+          - tmux
+          - htop
+          - cmake
+          - ninja-build
+          - ccache
+        state: present
+      when: ansible_os_family == "RedHat"
+
+    # ============================================
+    # COMMON CONFIGURATION
+    # ============================================
+
     - name: Ensure .ssh directory exists
       file:
         path: "/home/{{ username }}/.ssh"
@@ -118,3 +230,9 @@
         owner: "{{ username }}"
         group: "{{ username }}"
 
+    - name: Display completion message
+      debug:
+        msg:
+          - "Workstation setup complete!"
+          - "Please log out and back in for docker group to take effect."
+          - "Test with: docker compose version"
