--- a/ansible/workstation-setup.yml
+++ b/ansible/workstation-setup.yml
@@ -115,20 +115,28 @@
       when: ansible_os_family == "RedHat"
 
     - name: Add Docker repository (Fedora)
-      ansible.builtin.command:
-        cmd: dnf config-manager --add-repo https://download.docker.com/linux/fedora/docker-ce.repo
-      when:
-        - ansible_os_family == "RedHat"
-        - ansible_distribution == "Fedora"
-      changed_when: false
+        ansible.builtin.yum_repository:
+            name: docker-ce
+            description: Docker CE Repository
+            baseurl: https://download.docker.com/linux/fedora/$releasever/$basearch/stable
+            gpgcheck: yes
+            gpgkey: https://download.docker.com/linux/fedora/gpg
+            enabled: yes
+        when:
+            - ansible_os_family == "RedHat"
+            - ansible_distribution == "Fedora"
 
-    - name: Add Docker repository (RHEL/CentOS)
-      ansible.builtin.command:
-        cmd: dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
-      when:
-        - ansible_os_family == "RedHat"
-        - ansible_distribution != "Fedora"
-      changed_when: false
+        - name: Add Docker repository (RHEL/CentOS)
+        ansible.builtin.yum_repository:
+            name: docker-ce
+            description: Docker CE Repository
+            baseurl: https://download.docker.com/linux/centos/$releasever/$basearch/stable
+            gpgcheck: yes
+            gpgkey: https://download.docker.com/linux/centos/gpg
+            enabled: yes
+        when:
+            - ansible_os_family == "RedHat"
+            - ansible_distribution != "Fedora"
 
     - name: Install Docker Engine (RHEL/Fedora)
       dnf:
